# DuckChess

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  config.docker.yml  config.json  docker-compose.yml  docker-entrypoint.sh  train.sh
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  sprt.yml
.todo/: todo.txt
nnue_training/: __init__.py  config.py  data_gen.py  dataset.py  export.py  features.py  model.py  requirements.txt  train.py
opening_books/: README.md
scripts/: duck_chess_debug.sh  lichess-bot.sh  sprt.sh  train.sh
src/: engine.rs  lib.rs  main.rs
src/ChessPiece/: ChessPieceColor.rs  ChessPieceType.rs  Piece.rs
src/chess_piece/: mod.rs  piece.rs
src/core/: bitboard.rs  board.rs  mod.rs  moves.rs  squares.rs  zobrist.rs
src/engine/: book.rs  eval.rs  mod.rs  movegen.rs  nnue.rs  search.rs  tt.rs
src/engine/book/: epd.rs  pgn.rs  types.rs
src/engine/eval/: README.md  common.rs  evaluator.rs  kind.rs  material.rs  mod.rs  nnue.rs
src/engine/eval/nnue/: mod.rs  simd.rs  train.rs
src/engine/search/: README.md  alphabeta.rs  context.rs  mod.rs  negamax.rs  ordering.rs  pv.rs  searcher.rs  types.rs
src/repr/: bitboard.rs  mod.rs
src/uci/: mod.rs  protocol.rs
src/uci/protocol/: debug.rs  limits.rs  position.rs  state.rs
tests/: bitboard_tests.rs  book_tests.rs  core_tests.rs  engine_tests.rs  material_tests.rs  nnue_tests.rs  perft_tests.rs  search_tests.rs  uci_tests.rs
tests/fixtures/: test_book.epd  test_book.pgn
