[package]
name = "duck_chess"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
rand = "0.8"
shakmaty = "0.27"
vampirc-uci = "0.11"

[dev-dependencies]

[[bin]]
name = "duck_chess"
path = "src/main.rs"

[lib]
name = "duck_chess"
path = "src/lib.rs"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
